2010-04-19  James Youngman  <jay@gnu.org>

	Use the standard string class.
	* mystring.h: Assume the availability of the <string> header, so
	that mystring is always a typedef for std::string.
	* mystring.cc: Delete.
	* Makefile.am (sname_srcs): Delete mystring.cc.

	Assume support for the std namespace.
	* configure.ac: Don't check for the 'std' namespace.  Don't
	#define STD_NAMESPACE.
	* mystring.h: Don't use STD_NAMESPACE.

2010-04-18  James Youngman  <jay@gnu.org>

	Assume exception support.
	* configure.ac: Don't detect exception support, assume it.
	* admin.cc: Require exception support.
	* bodyio.cc: Likewise.
	* cdc.cc: Likewise.
	* cssc.h: Likewise.
	* delta.cc: Likewise.
	* except.h: Likewise.
	* get.cc: Likewise.
	* pf-del.cc: Likewise.
	* prs.cc: Likewise.
	* prt.cc: Likewise.
	* quit.cc: Likewise.
	* rmdel.cc: Likewise.
	* sact.cc: Likewise.
	* sf-kw.cc: Likewise.
	* unget.cc: Likewise.
	* val.cc: Likewise.

	Remove RCS keywords.
	* admin.cc: Remove RCS keywords (since we're using git now).
	* bodyio.h: Likewise.
	* cap.cc: Likewise.
	* cdc.cc: Likewise.
	* cssc.h: Likewise.
	* delta-iterator.cc: Likewise.
	* delta-iterator.h: Likewise.
	* delta-table.h: Likewise.
	* delta.cc: Likewise.
	* delta.h: Likewise.
	* dtbl-prepend.cc: Likewise.
	* environment.cc: Likewise.
	* fatalsig.cc: Likewise.
	* fdclosed.cc: Likewise.
	* file.cc: Likewise.
	* filediff.cc: Likewise.
	* fileiter.cc: Likewise.
	* filepos.h: Likewise.
	* get.cc: Likewise.
	* l-split.cc: Likewise.
	* linebuf.cc: Likewise.
	* my-getopt.cc: Likewise.
	* mystring.cc: Likewise.
	* mystring.h: Likewise.
	* pf-add.cc: Likewise.
	* pf-del.cc: Likewise.
	* pfile.cc: Likewise.
	* pfile.h: Likewise.
	* prompt.cc: Likewise.
	* prs.cc: Likewise.
	* prt.cc: Likewise.
	* quit.cc: Likewise.
	* rel_list.cc: Likewise.
	* rl-merge.cc: Likewise.
	* rmdel.cc: Likewise.
	* run.cc: Likewise.
	* sact.cc: Likewise.
	* sccs-delta.cc: Likewise.
	* sccsdate.cc: Likewise.
	* sccsfile.cc: Likewise.