@@ -1,5 +1,9 @@
 2010-04-19  James Youngman  <jay@gnu.org>
 
+	Implement myset<T> with std::set<T>.
+	* myset.h (myset): Switch to implementing with std::set.  This
+	should reduce the O(N) operations to O(log(N)).
+
 	Use the standard string class.
 	* mystring.h: Assume the availability of the <string> header, so
 	that mystring is always a typedef for std::string.
